--- a/java/res/values-ka/strings.xml
+++ b/java/res/values-ka/strings.xml
@@ -58,6 +58,8 @@
     <skip />
     <!-- no translation found for show_language_switch_key_summary (7343403647474265713) -->
     <skip />
+    <!-- no translation found for sliding_key_input_preview (8793911873468181898) -->
+    <skip />
     <!-- no translation found for key_preview_popup_dismiss_delay (6213164897443068248) -->
     <skip />
     <!-- no translation found for key_preview_popup_dismiss_no_delay (2096123151571458064) -->
@@ -221,9 +223,13 @@
     <skip />
     <!-- no translation found for subtype_en_US (6160452336634534239) -->
     <skip />
+    <!-- no translation found for subtype_es_US (5583145191430180200) -->
+    <skip />
     <!-- no translation found for subtype_with_layout_en_GB (2179097748724725906) -->
     <skip />
     <!-- no translation found for subtype_with_layout_en_US (1362581347576714579) -->
+    <skip />
+    <!-- no translation found for subtype_with_layout_es_US (6261791057007890189) -->
     <skip />
     <!-- no translation found for subtype_no_language (141420857808801746) -->
     <skip />
@@ -262,6 +268,8 @@
     <!-- no translation found for custom_input_style_already_exists (8008728952215449707) -->
     <skip />
     <!-- no translation found for prefs_usability_study_mode (1261130555134595254) -->
+    <skip />
+    <!-- no translation found for prefs_key_longpress_timeout_settings (1881822418815012326) -->
     <skip />
     <!-- no translation found for prefs_keypress_vibration_duration_settings (1829950405285211668) -->
     <skip />
